changed group creation to http
