# src/use_cases/routes.ts
@@ -1,9 +1,15 @@
 import * as express from "express";
 
-import { findAllUser, markAsDeleted, searchUserAndGroup } from "./controller";
+import {
+  createGroup,
+  findAllUser,
+  markAsDeleted,
+  searchUserAndGroup,
+} from "./controller";
 import { authMiddleware } from "../middlewares/auth.middeleware";
 
 export const useСases: express.IRouter = express.Router();
 useСases.get("/find-all", findAllUser);
 useСases.get("/search", authMiddleware, searchUserAndGroup);
 useСases.post("/mark-as-deleted", authMiddleware, markAsDeleted);
+useСases.post("/create-group", authMiddleware, createGroup);
